# rogo-esp32-sdk

./: README.md  requirements.txt
components/bt/esp_ble_mesh/api/: esp_ble_mesh_defs.h
components/bt/esp_ble_mesh/btc/: btc_ble_mesh_config_model.c
components/bt/esp_ble_mesh/mesh_core/: access.c  cfg_cli.c  main.c  net.c  net.h  provisioner_prov.c  transport.c  transport.h
components/esptool_py/esptool/: esptool.cfg
components/nvs_flash/include/: nvs.h
components/nvs_flash/src/: nvs_api.cpp  nvs_handle_simple.cpp  nvs_handle_simple.hpp  nvs_partition_manager.cpp  nvs_partition_manager.hpp  nvs_storage.cpp  nvs_storage.hpp
components/rogo/ir_common/: CMakeLists.txt  ir_common.cpp  ir_common.h
components/rogo/wile_common/: CMakeLists.txt  Kconfig  sdkconfig.wile  sdkconfig.wile.esp32c3  wile_define.h  wile_device.h  wile_gatt.h  wile_init.h  wile_mesh.h  wile_message.h  wile_mqtt.h  wile_network.h
components/rogo/wile_config/: CMakeLists.txt  wile_config.c  wile_config.h
examples/wile/wile_socket/: CMakeLists.txt  partitions.csv
examples/wile/wile_socket/main/: CMakeLists.txt  Kconfig.projbuild  app_device.cpp  app_device.h  board.c  board.h  idf_component.yml  main.cpp
examples/wile/wile_switch/: CMakeLists.txt  README.md  esp-idf-vscode-generated.gdb  gdbinit  partitions.csv  sdkconfig.run
examples/wile/wile_switch/main/: CMakeLists.txt  Kconfig.projbuild  app_device.cpp  app_device.h  board.c  board.h  board_led.c  board_led.h  board_test.c  board_test.h  idf_component.yml  main.cpp
examples/wile/wile_switch/partition_table/: partitionTable.csv
(+11 files in other folders)
